# sml

./: .flake8  .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  GEMINI.md  PACKAGING.md  README.md  advanced_schema.py  build.sh  development.md  faq.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  support_lists.md
.circleci/: config.yml  continue-config.yml  release-config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feture_request.yml
.github/workflows/: publish-dev.yml  publish.yml  scorecards.yml
docs/: pre-commit-tools.md
emulations/: run_emulation.py  run_emulations.py
emulations/cluster/: kmeans_emul.py
emulations/decomposition/: nmf_emul.py  pca_emul.py  rsvd_pca_emul.py  tsne_emul.py
emulations/ensemble/: adaboost_emul.py  forest_emul.py
emulations/feature_selection/: anova_f_emul.py  chi2_emul.py
emulations/gaussian_process/: 3pc.json  gpc_emul.py
emulations/linear_model/: glm_emul.py  logistic_emul.py  pla_emul.py  quantile_emul.py  ridge_emul.py  sgd_classifier_emul.py  sgd_emul.py
emulations/manifold/: isomap_emul.py  se_emul.py
emulations/metrics/: classification_emul.py  cluster_emul.py  regression_emul.py
emulations/naive_bayes/: gnb_emul.py
emulations/neighbors/: knn_emul.py
emulations/preprocessing/: chimerge_discretizer_emul.py  preprocessing_emul.py  quantile_transformer_emul.py
emulations/preprocessing/encoding/: mean_encoder_emul.py  woe_encoder_emul.py
emulations/stats/: __init__.py  pearsonr_emul.py  psi_emul.py  vif_emul.py  woe_iv_emul.py
emulations/svm/: svm_emul.py
emulations/tree/: tree_emul.py
emulations/utils/: 3pc_128.json  distributed.proto  distributed.py  distributed_impl.py  distributed_pb2.py  distributed_pb2_grpc.py  emulation.py  grid_search_cv_emul.py  jacobie_svd_emul.py  jacobievd_emul.py  reveal_emul.py  svd_emul.py
sml/: __init__.py
sml/cluster/: __init__.py  kmeans.py
sml/decomposition/: __init__.py  nmf.py  pca.py  tsne.py
sml/ensemble/: __init__.py  adaboost.py  forest.py
sml/feature_selection/: __init__.py  anova_f.py  univariate_selection.py
sml/gaussian_process/: __init__.py  _gpc.py  kernels.py  laplace.py
sml/linear_model/: __init__.py  glm.py  logistic.py  pla.py  quantile.py  ridge.py  sgd.py  sgd_classifier.py
sml/linear_model/design/: api_design.md  core_design.md  formula_design.md  glm_design.md  glm_formu.md  metrics_design.md  model_design.md  mpc_scale.md  mpc_scale_influence.md  sf_ss_glm.md  solvers_design.md
sml/linear_model/design/cheetah_sheet/: glm_formulas.md  mpc_scaling_guide.md  scaling_guide_comprehensive.md
sml/linear_model/glm/: __init__.py  model.py
sml/linear_model/glm/core/: distribution.py  distribution.py.bak  family.py  link.py
sml/linear_model/glm/formula/: base.py  dispatch.py  generic.py  optimized.py
sml/linear_model/glm/metrics/: metrics.py
sml/linear_model/glm/solvers/: __init__.py  base.py  irls.py  irls_generic.py  optimized_irls.py  sgd.py  utils.py
sml/linear_model/glm/solvers/irls/: __init__.py  bernoulli_logit.py  gamma_inverse.py  gamma_log.py  gaussian_identity.py  poisson_log.py  tweedie_log.py
sml/linear_model/utils/: _linprog_simplex.py  link.py
sml/manifold/: se.py
sml/metrics/classification/: __init__.py  auc.py  classification.py
sml/metrics/cluster/: __init__.py  cluster.py
sml/metrics/regression/: __init__.py  regression.py
sml/naive_bayes/: __init__.py  gnb.py
sml/neighbors/: __init__.py  knn.py
sml/preprocessing/: __init__.py  chimerge_discretizer.py  preprocessing.py  quantile_transformer.py
sml/preprocessing/encoding/: __init__.py  mean_encoder.py  woe_encoder.py
sml/stats/: __init__.py  pearsonr.py  psi.py  vif.py  woe_iv.py
sml/svm/: __init__.py  svm.py
sml/tree/: __init__.py  tree.py
sml/utils/: __init__.py  dataset_utils.py  extmath.py  fxp_approx.py  grid_search_cv.py  utils.py
tests/: conftest.py
tests/cluster/: kmeans_test.py
tests/decomposition/: nmf_test.py  pca_test.py  tsne_test.py
tests/ensemble/: adaboost_test.py  forest_test.py
tests/feature_selection/: anova_f_test.py  chi2_test.py
tests/gaussian_process/: gpc_test.py
tests/linear_model/: glm_test.py  logistic_test.py  new_glm_test.py  pla_test.py  quantile_test.py  ridge_test.py  sgd_classifier_test.py  sgd_test.py
tests/manifold/: isomap_test.py  jacobi_test.py  knn_test.py  se_test.py  shortest_path_test.py
tests/metrics/: classification_test.py  cluster_test.py  regression_test.py
tests/naive_bayes/: gnb_test.py
tests/neighbors/: knn_test.py
tests/preprocessing/: chimerge_discretizer_test.py  preprocessing_test.py  quantile_transformer_test.py
tests/preprocessing/encoding/: mean_encoder_test.py  woe_encoder_test.py
tests/stats/: pearsonr_test.py  psi_test.py  vif_test.py  woe_iv_test.py
tests/svm/: svm_test.py
tests/tree/: tree_test.py
tests/utils/: dataset_utils_test.py  extmath_test.py  grid_search_cv_test.py  jacobie_svd_test.py  jacobievd_test.py  reveal_test.py
