[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sf-sml"
description = "Secretflow Secure Machine Learning"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "SecretFlow Team", email = "secretflow-contact@service.alipay.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "spu==0.9.4.dev20250618",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # Development and code quality tools
    "pre-commit",
    "pytest",
    "pylint",

    # Code formatting and linting (matching pre-commit versions)
    "black>=24.4.2",
    "isort>=5.13.2",
    "flake8>=7.3.0",
    "flake8-absolute-import>=1.0.0",
    "flake8-pyproject",
    "autoflake>=2.3.1",
    "pyupgrade>=3.16.0",
    "mypy",
    "pydocstyle",

    # Emulations and tests dependencies
    "pandas==1.5.3",
    "scikit-learn==1.5.2",
]

[project.urls]
Homepage = "https://github.com/secretflow/sml"
Repository = "https://github.com/secretflow/sml"

[tool.setuptools.packages.find]
exclude = ["emulations*", "tests*"]

[tool.setuptools_scm]
# Automatically generate version number from git tags
write_to = "sml/_version.py"
fallback_version = "0.1.0.dev0"
local_scheme = "no-local-version"
version_scheme = "python-simplified-semver"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test*", "*Tests"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
ignore_missing_imports = true
no_strict_optional = true
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false

[tool.flake8]
max-line-length = 120
extend-select = ["ABS101"]
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "E402",  # module level import not at top of file
    "E501",  # line too long
    "F541",  # f-string is missing placeholders
    "E266",  # too many leading '#' for block comment
    "E902",  # TokenError or IndentationError
    "E741",  # ambiguous variable name
    "E731",  # do not assign a lambda expression, use a def
    "F403",  # 'from module import *' used; unable to detect undefined names
    "F405",  # name may be undefined, or defined from star imports
    "W293",  # blank line contains whitespace
]
exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".venv",
    "venv",
    "build",
    "dist",
]
per-file-ignores = [
    "sml/__init__.py:ABS101",
]

[tool.pydocstyle]
convention = "numpy"
add-ignore = [
    "D100",  # Missing docstring in public module
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
    "D200",  # One-line docstring should fit on one line
    "D202",  # No blank lines allowed after function docstring
    "D205",  # 1 blank line required between summary line and description
    "D301",  # Use r""" if any backslashes in a docstring
    "D400",  # First line should end with a period
    "D401",  # First line should be in imperative mood
    "D403",  # First word of the first line should be properly capitalized
    "D406",  # Section name should end with a newline
    "D407",  # Missing dashed underline after section
    "D409",  # Section underline should match the length of its name
    "D410",  # Missing blank line after section
    "D411",  # Missing blank line before section
    "D412",  # No blank lines allowed between a section header and its content
]
